# py.init

./: .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
my_code/: environment_variables.py  my_validated_code.py
tests/: __init__.py  conftest.py  test_demo.py  test_my_code.py  test_validation.py
